styles/style.css
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.font-inter{
  font-family: "Inter", sans-serif;
  font-optical-sizing: auto;
} 

nav .navigation {
   display: flex;
   justify-content: space-between;
   align-items: center;
}
nav .navigation ul{
    display: flex;
    gap: 32px;
    list-style: none;
    margin-top: 34px;
    margin-bottom: 34px;
}
nav .navigation ul li{
    font-size: 16px;
    font-weight: 500;
    color: #000000;
}
nav .navigation img{
    margin-left: 120px;
    margin-top: 16px;
    margin-bottom: 16px;
    max-width: 139px;
}
nav .navigation #btn-n{
    margin-right: 120px;
    margin-top: 16px;
    margin-bottom: 16px;
    padding: 12.5px 16px;
    background-color: #469165;
    border: none;
    border-radius: 4px;
    color: white;
    font-size: 16px;
    cursor: pointer;
}
#banner{
    /* background-color: #469165; */
    background-image: url('../assets/hero-bg.png');
    height: 648px;
    width: 100%;
}
#banner .banner-content{
    text-align: center;
    
    margin-bottom: 179px;
    margin-left: 120px;
    margin-right: 120px;
    
}
#banner #btn-h{
    font-size: 16px;
    font-weight: normal;
    padding-top: 8px;
    padding-bottom: 8px;
    padding-left: 12px;
    padding-right: 12px;
    color: #469165;
    background-color: #FFFFFF;
    border-radius: 1000px;
    border: none;
    margin-top: 115px;
    margin-bottom: 16px;
    cursor: pointer;
}

/* OUTER DOT (16x16) */
.status-dot {
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background: #cfe6d8;

  display: flex;
  align-items: center;
  justify-content: center;
}

/* MIDDLE DOT */
.dot-mid {
  width: 10px;
  height: 10px;
  border-radius: 50%;
  background: #8fc4a5;

  display: flex;
  align-items: center;
  justify-content: center;
}

/* INNER CORE */
.dot-core {
  width: 6px;
  height: 6px;
  border-radius: 50%;
  background: #4e8f63;
}
#btn-h{
    display: inline-flex;
    align-items: center;
    gap: 6px;
}
#banner .banner-content h1{
    font-size: 72px;
    font-weight: bold;
    line-height: 84px;
    max-width: 770px;
    margin: 0 auto;
    color: #FFFFFF;
}
#banner .banner-content #h-color{
    color: #30B868;
}
#banner .banner-content p{
    font-size: 18px;
    font-weight: normal;
    line-height: 24px;
    color: #FFFFFF;
    max-width: 1360px;
    margin: 0 auto;
    margin-top: 16px;
    padding: 0px 295px ;
}
#banner #btn-b{
     margin-right: 16px;
    margin-top: 32px;
    padding-top: 16.5px;
    padding-bottom: 16.5px;
    padding-left: 16px;
    padding-right: 16px;
    background-color: #469165;
    border: none;
    border-radius: 4px;
    color: white;
    font-size: 16px;
    cursor: pointer;
}
#banner #btn-b2 {
    margin-right: 16px;
    margin-top: 32px;
    padding-top: 16.5px;
    padding-bottom: 16.5px;
    padding-right: 16px;
    padding-left: 16px;
    background-color:transparent;
    border: 1px solid white;
    border-radius: 4px;
    color: white;
    font-size: 16px;
    cursor: pointer;
}

#note .note-container .note-box{
    display: flex;
    gap: 24px;
    align-items: center;
    margin-top: 44px;
    margin-left: 120px;
    margin-right: 120px;
}
#note .note-container .section-heading{
    text-align: center;
}
#note .note-container .note-box .note-card{
    height: 300px;
    max-width: 322px;
    text-align: center;
    align-items: center;
    /* padding: 24px; */
    padding-top: 69.5px;
    background-color: #FFFFFF;
    border-radius: 8px;
    box-shadow: 0px -6px 16px rgba(0, 0, 0, 0.1);
}
#note .note-container .note-box .note-card .logo-back{
    max-width: 60px;
    height: 60px;
    background-color: #F95555;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0 auto;
}
#note .note-container .note-box .note-card h3{
   margin: 16px auto;
    font-size: 24px;
    font-weight: 600;
    max-width: 274px;
}
#note .note-container h2{
    padding-top: 50px;
    font-size: 48px;
    font-weight: bold;
    color: #001931;
    margin-bottom: 16px;
}
#note .note-container .hp{
    font-size: 16px;
    font-weight: normal;
    line-height: 20px;
    color: #627382;
}
#note .note-container .note-box .note-card p{
    /* max-width: 274px; */
    font-size: 16px;
    font-weight: normal;
    line-height: 20px;
    color: #627382;
    margin-bottom: 0px;
    margin-top: 16px;
    margin-left: 24px;
    margin-right: 24px;
    padding-bottom: 0px;
}
#solution .solution-container{
    display: flex;
    align-items: center;
    gap: 60px;
    padding: 120px;
}
#solution .solution-container .solution-list ul{
    list-style: none;
}
#solution .solution-container .solution-list .sp{
    max-width: 700px;
    margin-top: 16px;
    margin-bottom: 40px;
    font-size: 16px;
    font-weight: normal;
    line-height: 20px;
    color: #627382;
}
#solution .solution-container .solution-list .sp1{
    color:#469165;
    font-size: 16px;
    line-height: 20px;   
    font-weight: normal;
    margin-bottom: 16px;

}
#solution .solution-container .solution-list h1{
    font-size: 48px;
    font-weight: bold;
    color: #001931;
}
#solution .solution-container .solution-list ul li{
    font-size: 16px;
    font-weight: normal;
    line-height: 20px;
    color: #627382;
    margin-bottom: 16px;
}
#clear .clear-container{
    padding-top: 80px;
    padding-bottom: 80px;
    padding-left: 40px;
    padding-right: 40px;
    color: #F7F6F2;
    text-align: center;
    /* border: 1px solid red; */
    background-color: #F7F6F2;
    margin-left: 120px;
    margin-right: 120px;
    margin-bottom: 120px;
    max-width: 1360px;
    border-radius: 12px;
}
#clear .clear-container #btn-f{
      margin-right: 16px;
    margin-top: 24px;
    margin-bottom: 16px;
    padding-top: 16.5px;
    padding-bottom: 16.5px;
    padding-left: 16px;
    padding-right: 16px;
    background-color: #469165;
    border: none;
    border-radius: 4px;
    color: white;
    font-size: 16px;
    cursor: pointer;
}
#clear .clear-container h1{
    font-size: 48px;
    font-weight: bold;
    margin-bottom: 16px;
    color :#001931
}
#clear .clear-container p{
    font-size: 16px;
    font-weight: normal;
    line-height: 24px;
    color: #627382;
}
#foot {
    background-color: #001931;
}
#foot .footer-container{
    display: flex;
    gap: 1006px;
}
#foot .footer-logo{
    margin-left: 120px;
    margin-top: 120px;
    margin-bottom: 168px;
}
#foot .social{
    margin-top: 120px;
    
}
#foot .social ul{
    display: flex;
    gap: 16px;
    list-style: none;
}
#foot .social h3{
    color: #FFFFFF;
    font-size: 20px;
    font-weight: normal;
    line-height: 28px;
    margin-bottom: 16px;

}
#foot .footer-line{
    font-size: 18px;
    font-weight: normal;
    line-height: 24px;
    color: #FAFAFA;
    text-align: center;
    padding-bottom: 30px;
    margin-top: 30px;
}
hr{
    max-width: 1360px; 
    margin: 0 auto;
}

